android技术栈，第一次提交

--- a/Readme
+++ b/Readme
@@ -12,4 +12,9 @@ fragment底部按钮切换
 AsyncTask
 ThreadLocal
 ThreadPool
-自定义view 
+自定义view
+fragment切换
+现在支付sdk接入demo
+AsyncTask
+ThreadLocal
+ThreadPool
